bindings/lisp/fa/type.lisp

(in-package :faudio)
(defctype type-frames :int32)
(defctype type-simple :int)
(define-foreign-type type-type () () (:actual-type :pointer))
(define-parse-method type () (make-instance 'type-type))
(defclass type () ((type-ptr :initarg :type-ptr)))
(defmethod translate-to-foreign (x (type type-type)) (slot-value x 'type-ptr))
(defmethod translate-from-foreign (x (type type-type)) (make-instance 'type :type-ptr x))
(defcfun (type-simple "fa_type_simple") type (a type-simple))
(defcfun (type-pair "fa_type_pair") type (a type) (b type))
(defcfun (type-vector "fa_type_vector") type (a type) (b :int32))
(defcfun (type-frame "fa_type_frame") type (a type))
(defcfun (type-copy "fa_type_copy") type (a type))
(defcfun (type-destroy "fa_type_destroy") :void (a type))
(defcfun (type-repeat "fa_type_repeat") type (a :int) (b type))
(defcfun (type-is-simple "fa_type_is_simple") :boolean (a type))
(defcfun (type-is-pair "fa_type_is_pair") :boolean (a type))
(defcfun (type-is-vector "fa_type_is_vector") :boolean (a type))
(defcfun (type-is-frame "fa_type_is_frame") :boolean (a type))
(defcfun (type-channels "fa_type_channels") :int (a type))
(defcfun (type-get-simple "fa_type_get_simple") type-simple (a type))
(defcfun (type-get-pair-fst "fa_type_get_pair_fst") type (a type))
(defcfun (type-get-pair-snd "fa_type_get_pair_snd") type (a type))
(defcfun (type-get-vector-base "fa_type_get_vector_base") type (a type))
(defcfun (type-get-vector-size "fa_type_get_vector_size") :int32 (a type))
(defcfun (type-get-frame-base "fa_type_get_frame_base") type (a type))

